# shim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: buffer.md  cli.md  event.md  synchronized.md
examples/: CMakeLists.txt  buffer.cpp  cli.cpp  event.cpp  synchronized.cpp
include/shim/: buffer.h  cli.h  event.h  synchronized.h  task.h
tests/: CMakeLists.txt  buffer_tests.cpp  cli_tests.cpp  event_tests.cpp
